# cookiecutter-python

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: linting.yaml  testing.yaml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_cookiecutter.py
{{cookiecutter.project_slug}}/: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: linting.yaml  testing.yaml
{{cookiecutter.project_slug}}/actions/: pypi_publish.yaml  pypi_publish.yml  release_draft_template.yml  release_drafter.yaml  release_drafter.yml  testing_all_os.yaml  testing_all_os.yml  testing_linux_only.yaml  testing_linux_only.yml
{{cookiecutter.project_slug}}/licenses/: gpl3  mit
{{cookiecutter.project_slug}}/vscode/: settings.json
