[tool.poetry]
name = "cookiecutter-python"
version = "0.12.1"
description = "A cookiecutter template to setup a generic Python project with Poetry"
authors = ["Paul Sanders <psanders1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
cookiecutter = ">=2.1.1"

[tool.poetry.group.dev.dependencies]
black = ">=22.6.0"
isort = ">=5.10.1"
pytest = ">=7.1.2"
pre-commit = ">=2.20.0"
ruff = ">=0.0.120"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)/
'''

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["tests"]

[tool.ruff]
select=["T201", "T203"]
ignore=["E501", "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]
