[tool.poetry]
name = "cookiecutter-python"
version = "0.12.1"
description = "A cookiecutter template to setup a generic Python project with Poetry"
authors = ["Paul Sanders <psanders1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
cookiecutter = ">=2.1.1"

[tool.poetry.group.dev.dependencies]
black = ">=22.12.0"
pytest = ">=7.2.0"
pre-commit = ">=2.20.0"
ruff = ">=0.0.272"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)/
'''

[tool.ruff]
select = ["E", "F", "UP", "T201", "T203", "I001"]
ignore = ["E501"]
exclude = ["{{{{cookiecutter.project_slug}}}}"]
line-length = 100
fix = true
target-version = "py37"
