[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.creator }} <{{ cookiecutter.creator_email }}>"]
{% if cookiecutter.license != "No License" -%}
license = "{{ cookiecutter.license }}"
{% endif -%}
readme = "README.md"

[tool.poetry.dependencies]
python = "^{{ cookiecutter.min_python_version }}"

[tool.poetry.group.dev.dependencies]
black = ">=22.12.0"
isort = ">=5.10.1"
mypy = ">=0.991"
pre-commit = ">=2.20.0"
pytest = ">=7.2.0"
pytest-cov = ">=4.0.0"
tox = ">=4.0.8"
ruff = ">=0.0.211"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = {{ cookiecutter.max_line_length }}
include = '\.pyi?$'
exclude = '''
/(
    \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)/
'''

[tool.isort]
profile = "black"
line_length = {{ cookiecutter.max_line_length }}
src_paths = ["{{ cookiecutter.source_dir }}", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov={{ cookiecutter.source_dir }} --cov-report term-missing"

[tool.ruff]
select=["T201", "T203"]
ignore=["E501", "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]
