[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.creator }} <{{ cookiecutter.creator_email }}>"]
{% if cookiecutter.license != "No License" -%}
license = "{{ cookiecutter.license }}"
{% endif -%}
readme = "README.md"

[tool.poetry.dependencies]
python = "^{{ cookiecutter.min_python_version }}"

[tool.poetry.group.dev.dependencies]
black = ">=23.3.0"
mypy = ">=1.3.0"
pre-commit = ">=3.3.1"
pytest = ">=7.3.0"
pytest-cov = ">=4.0.0"
ruff = ">=0.0.267"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = {{ cookiecutter.max_line_length }}
include = '\.pyi?$'
exclude = '''
/(
    \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)/
'''

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov={{ cookiecutter.source_dir }} --cov-report term-missing"

[tool.ruff]
select = ["E", "F", "T201", "T203", "I001"]
ignore = ["E501"]
line-length = {{ cookiecutter.max_line_length }}
fix = true
